# excelMailer

./: .gitignore  main.py  pyproject.toml
src/: config.py  excelManager.py  mailsmanager.py  template.py
